@@ -45,6 +45,7 @@
             Bangle.js2: Ensure `HRM-raw.raw` is set correctly after we moved to binary hrm algorithm
             nRF5x: Add `NRF.on("passkey", ...)` to allow passkey pairing with `NRF.setSecurity({mitm:1, display:1});`
             nrf52: Allow disabling pairing with `NRF.setSecurity({pair:0})`
+            Allow E.pipe to pipe from Strings, remove pipe's internal `position` counter (fix #2352)
             
      2v18 : Fix drawString with setClipRect with 90/270-degree rotation (fix #2343)
             Pico/Wifi: Enabled JIT compiler
